tests/parser/tests/cases/should_fail/non_hex_unicode_char/case.hash
k := '\u{g00000}';
